# zeno-wallet

./: .gitignore  CHANGES.md  LICENSE  NOTICE  README.md  ROUTER_ENHANCEMENTS.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.js
.VSCodeCounter/2025-11-14_02-21-28/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-11-22_06-15-59/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-11-23_04-52-53/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-11-23_20-35-30/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
scripts/: gen-i18n-types.js
src/: App.svelte  main.ts  preload.js
src-tauri/: Cargo.toml  notice.md  tauri.conf.json
src-tauri/android/app/src/main/: AndroidManifest.xml
src-tauri/android/app/src/main/java/com/zenowallet/: MainActivity.kt
src-tauri/android/app/src/main/java/com/zenowallet/photo/: PhotoPlugin.kt  PhotoResult.kt
src-tauri/capabilities/: dapp_desktop.json  dapp_mobile.json  default.json  desktop.json  mobile.json
src-tauri/src/: constants.rs  db.rs  error.rs  i18n.rs  lib.rs  main.rs  state.rs  types.rs
src-tauri/src/actions/: readme.md  smart_swap.rs
src-tauri/src/actions/uniswap/: router.rs  v3.rs  v4.rs
src-tauri/src/activities/: addr.rs  mod.rs  tx.rs
src-tauri/src/ai/: chat.rs  provider.rs
src-tauri/src/apps/: mod.rs
src-tauri/src/auth/: mod.rs  ps_check.rs
src-tauri/src/browser/: dapp.rs  mod.rs  readme.md  webview.rs
src-tauri/src/comm/: core.rs  db.rs  evm.rs  helios.rs  mod.rs  password.rs  provider.rs  qr.rs
src-tauri/src/core/: account.rs  api.rs  config.rs  db.rs  mod.rs  persistent.rs  session.rs  state.rs  update.rs  vault.rs
src-tauri/src/dapp/: README.md  comm.rs  host.rs  readme.md
src-tauri/src/data/: addr.rs  contract.rs  currency.rs  ens.rs  forex.rs  meta.rs  mod.rs  msg.rs  nft.rs  token.rs  tx.rs
src-tauri/src/eips/: eip1193.rs  eip155.rs  eip1559.rs  eip191.rs  eip2612.rs  eip6963.rs  eip712.rs  eip7702.rs  mod.rs
src-tauri/src/evm/: abi.rs  address.rs  assets.rs  block.rs  calldata.rs  chains.rs  currency.rs  dryrun.rs  eip1193.rs  eip155.rs  eip1559.rs  eip191.rs  eip712.rs  gas.rs  mod.rs  permit2.rs  revm.rs  selector.rs  signature.rs  token.rs  transfer.rs
src-tauri/src/helios/: client.rs  handler.rs  mod.rs  switch.rs  test.rs
src-tauri/src/i18n/: locales.rs
src-tauri/src/indexer/: balance.rs
src-tauri/src/modules/uniswap/: actions.rs  comm.rs
src-tauri/src/qr/: img.rs
src-tauri/src/revm/: gas.rs  mod.rs  native.rs  readme.md  router.rs  test.rs  transfer.rs
src-tauri/src/rpc/: action.rs  custom.rs  gateway.rs  gateway1.rs  https.rs  manager.rs  method.rs  mod.rs  multicall3.rs  public.rs  retry.rs
src-tauri/src/rpc/ankr/: advance.rs  mod.rs  models.rs  parse.rs
src-tauri/src/spv/: helios.rs
src-tauri/src/utils/: i18n.rs  mod.rs  num.rs  password_check.rs  serde.rs  time.rs
src-tauri/src/voice/: readme.md  stt.rs  tts.rs
src/abis/: erc721.json
src/components/: accountList.svelte  currencySelector.svelte  deleteAccount.svelte  fileLoad.svelte  modal.svelte  nftBalace.svelte  resetWallet.svelte  restoreMn.svelte  switchTheme.svelte
src/crypto/: chains.ts  index.ts  tokens.ts
src/lib/: RouterExample.svelte  routeGuards.ts
src/pages/: QR.svelte  Settings.svelte  Sign.svelte
src/provider/: ankr.ts  ankr_type.ts
src/runtime/: balance.ts  chains.ts  db.ts  (+6 more)
static/: ai-chat.html  dapp-shell.html  manifest.json  payload.js  toolbar.html   wrapper.html
(+141 files in other folders)
