[package]
name = "zeno-wallet"
version = "0.1.0"
description = "A Ethereum wallet built with Tauri"
authors = ["zenostudio <zenostudio@proton.me>"]
edition = "2024"
license = "MIT"

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true # 启用链接时优化。
opt-level = "s" # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort" # 通过禁用 panic 处理程序来提高性能。
strip = true # 确保移除调试符号。

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zeno_wallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
tauri-plugin-opener = "2.5.2"
revm = { version = "31", features = ["serde"] }
alloy-primitives = "1.4.1"
helios = { git = "https://github.com/a16z/helios", branch = "master",default-features = false}
once_cell = "1.21.3"
regex = "1.12.2"
time = "0.3.44"
rusqlite = { version = "0.37", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
rusqlite_migration = "2.3.0"
url = "2.5"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2.4.2"



