[package]
name = "zeno-wallet"
version = "0.1.0"
description = "A Ethereum wallet built with Tauri"
authors = ["zenostudio <zenostudio@proton.me>"]
edition = "2024"
license = "GPL-3.0-only"

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true # 启用链接时优化。
opt-level = "s" # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort" # 通过禁用 panic 处理程序来提高性能。
strip = true # 确保移除调试符号。

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zeno_wallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = [] }
tauri-plugin-os = "2.3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

revm = "31.0.0"
alloy-primitives = "1.4.1"
alloy-sol-types = "1.4.1"
alloy-provider = "1.1.1"
alloy-eips = "1.1.1"
alloy-consensus = "1.1.1"
alloy-network = "1.1.1"
alloy-rlp = "0.3.12"
alloy-contract = "1.1.1"
alloy-dyn-abi = "1.4.1"
alloy-json-abi = "1.4.1"

once_cell = "1.21.3"
regex = "1.12.2"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
url = "2.5"
rust-rocksdb = "0.44.2"
bincode = "2.0.1"
reqwest = { version = "0.12.22", features = ["json","brotli","gzip","http2", "rustls-tls"], default-features = false }
rustls = { version = "0.23", features = ["ring","logging","tls12"], default-features = false }
hex = "0.4.3"
base64 = "0.22.1"
piper-rs = "0.1.9"
whisper-rs = "0.15.1"

z_wallet_core = { git = "https://github.com/zeno-studio/z-wallet-core.git", branch = "master" }
helios = { git = "https://github.com/a16z/helios", tag = "0.10.2" }
getrandom = "0.3.4"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2.4.2"


